# nonebot-plugin-picstatus-ng

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: FUNDING.yml
examples/external_example/: __init__.py  bg_provider.py  collectors.py
examples/external_example/templates/example_template/: __init__.py
nonebot_plugin_picstatus/: __init__.py  bg_provider.py
nonebot_plugin_picstatus/collectors/: __init__.py  bot.py  misc.py  network.py
nonebot_plugin_picstatus_ng/: __init__.py  config.py  misc_statistics.py
nonebot_plugin_picstatus_ng/collectors/: disk.py
nonebot_plugin_picstatus_ng/templates/: pw_render.py
